FLOW-1162 scrollbar issue fixed in chrome v121

--- a/packages/flow-core/src/mixins/scss/_mixins.scss
+++ b/packages/flow-core/src/mixins/scss/_mixins.scss
@@ -7,15 +7,14 @@
 
 @mixin scrollbar() {
 	&::-webkit-scrollbar {
-		width: 6px;
-		height: 6px;
+		display: none;
 	}
 	&::-webkit-scrollbar-track {
 		-webkit-box-shadow: inset 0 0 2px transparent;
 		background-color: transparent;
 	}
 	scrollbar-color: var(--color-neutral-default) transparent;
-	scrollbar-width: thin;
+	scrollbar-width: none;
 	&::-webkit-scrollbar-thumb {
 		background-color: var(--color-neutral-default);
 	}
